[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/shooter/shooter-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Shooter.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Objects/Effect.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sounds/SFX/David Stearns - Platformer SFX/Fireball.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=4]
resource_name = "glint"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Shooter/Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1 ), Vector2( 1, 2 ), Vector2( 1, 3 ), Vector2( 1, 4 ) ]
}

[node name="Shooter" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 5
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "glint"
anims/glint = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -8.34465e-07 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Effect" parent="." instance=ExtResource( 3 )]

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 200.0
bus = "SFX"
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
